--- a/style.css
+++ b/style.css
@@ -1,12 +1,62 @@
 * {
-  box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-/* Add styles here! */
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+  }
+  
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* Add styles here! */
+  .intro-chunk {
+    background-color: #F5F5F5;
+    height: 100%;
+  }
+  .title {
+    font-weight: bold;
+    margin: 0;
+    padding: 48px;
+    background-color: #CC9900;
+  }
+  strong {
+    color: #009966;
+  }
+  .p-header {
+    width: 430px;
+    padding: 20px 0px 20px 100px;
+    background-color: #CC9900;
+  }
+  
+  
+  /* .max-width-wrapper-bottom,
+  .max-width-wrapper-top {
+    height: 400px;
+  } */
+  .max-width-wrapper-top {
+    height: 40%;
+  }
+  .max-width-wrapper-bottom {
+    background-color: #666666;
+    height: 60%;
+    padding-top: 64px;
+    border-top: 8px solid #999999;
+  }
+  .card {
+    width: 800px;
+    height: 312px;
+    background-color: #FFFFFF;
+    border-bottom: 8px solid #999999;
+    padding: 24px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .indented-heading {
+    background-color: #FFBF00;
+    width: 400px;
+    padding: 15px;
+    border-bottom: 8px solid #CC9900;
+    margin-left: -30px;
+    text-align: center;
+  }
